# vim-tmux-remote

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
.vim/: coc-settings.json
auto_nvr/: auto_nvr.py
tests/: test_auto_nvr.py
vir/: vir.py
